# llava_SVC

./: README.md  fase2_generar_vectores_vlm.py  fase3_entrenamiento_svc.py  fase4_inferencia.py  main.py  pyproject.toml  utils.py
dataset_final_vlm/: dataset_y.npy
modelo_final/: escalador.joblib
